--- a/2----Hamburger_Menu_Overlay/css/style.css
+++ b/2----Hamburger_Menu_Overlay/css/style.css
@@ -33,7 +33,7 @@ body {
 
 #showcase::before {
   content: ' ';
-  background: url('../img/showcase.jpg') no-repeat center center/cover;
+  background: url('../img/showcase-min.jpg') no-repeat center center/cover;
   position: absolute;
   top: 0;
   left: 0;
