--- a/5---sidebar-menu/style.css
+++ b/5---sidebar-menu/style.css
@@ -118,7 +118,7 @@ label #cancel {
 }
 
 section {
-  background: url('./pc.jpg') no-repeat center center/cover;
+  background: url('./pc-min.jpg') no-repeat center center/cover;
   /* background-position: center; */
   /* background-size: cover; */
   height: 100vh;
